# youtube-rag

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/indexing/: __init__.py  assets.py  embed.py
src/serving/: retrieval.py  serve.py
src/youtube_persona/indexing/: __init__.py  assets.py  resources.py  utils.py
src/youtube_persona/serve/: retrieval.py  serve.py
